--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 src="https://assets-v2.scaler.com/assets/academy/svg/scaler-53f7b55b0dc3a8f18264d872fd53821b101c3bb6c5c1b282e609e41bae2641a3.svg.gz">
             <!-- <a class="navbar-brand" href="#"></a> -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-center flex-grow-1">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-center flex-grow-1" id="mouni">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Curriculum</a>
                     </li>
@@ -41,13 +41,9 @@
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
                 </ul>
-                <form class="" role="search">
-                    <!-- <input class="form-control" type="search" placeholder="Login" aria-label="Search"> -->
-                    <button class="btn text-primary btn-outline-light" type="submit">Login</button>
-                    <!-- <button class="btn bg-danger text-light" type="submit">Request a call</button> -->
-                </form>
+                <button class="btn text-dark btn-outline-primary m-2" type="submit">Login</button>
             </div>
-            <button class="btn bg-danger text-light" type="submit">Request a call</button>
+            <button class="btn bg-danger text-light m-2" type="submit">Request a call</button>
 
             <button class="navbar-toggler" id="Dashboard" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
@@ -55,6 +51,172 @@
             </button>
         </div>
     </nav>
+
+    <div id="home">
+        <div id="home1">
+            <div id="h11">Your Path to a Successful Tech Career!</div>
+            <div id="h12">Now experience the program for <b>FREE</b> </div>
+            <div id="h13">
+                <button>BOOK A LIVE CLASS</button>
+                <button id="h15">EXLORE ACADEMY</button>
+            </div>
+            <div id="h14"> NEXT BATCH STARTS<a>MID-OCTOBER</a></div>
+        </div>
+        <div id="home2">
+            <h2>Book a Live Class,For <a>Free!</a></h2>
+            <form action="">
+                <div id="label1">
+                    <input id="name" type="text" placeholder="Name">
+                    <input id="name" type="email" placeholder="Email Address">
+                    <div id="label2">
+                        <input type="number" placeholder="+91">
+                        <input type="text" placeholder="Phone">
+                    </div>
+                    <div id="label3">
+                        <input id="name" type="text" placeholder="Graduation">
+                        <!-- <input type="text" placeholder="College"> -->
+                        <select class="" id="name">
+                            <option>College</option>
+                            <option></option>
+                            <option>Type to Search</option>
+                            <option>No Result Found</option>
+                        </select>
+                    </div>
+                    <select class="" id="name">
+                        <option>company</option>
+                        <option></option>
+                        <option value="">Type to Search</option>
+                        <option>No Result Found</option>
+                    </select>
+                    <select class="" id="name">
+                        <option>Job-Title</option>
+                        <option value="">Engineering Leadership</option>
+                        <option value="">Software Development Engineer(BackEnd)</option>
+                        <option value="">Software Development Engineer(FrontEnd)</option>
+                        <option value="">Software Development Engineer(FullStack)</option>
+                        <option value="">Data Scientist</option>
+                        <option value="">Android Engineer</option>
+                        <option value="">IOS Engineer</option>
+                        <option value="">Devops Engineer</option>
+                        <option value="">Support Engineer</option>
+                        <option value="">Research Engineer</option>
+                        <option value="">Engineering Intern</option>
+                        <option value="">QA-Engineer</option>
+                        <option value="">Co-Founder</option>
+                        <option value="">SDET</option>
+                        <option value="">Product Manager</option>
+                        <option value="">Product Designer</option>
+                        <option value="">Backend Architect</option>
+                        <option value="">Program Manager</option>
+                        <option value="">Release Engineer</option>
+                        <option value="">Security Leadership</option>
+                        <option value="">Database Administrator</option>
+                        <option value="">Data Analyst</option>
+                        <option value="">Data Engineer</option>
+                        <option value="">Non Coder</option>
+                        <option value="">Other</option>
+                    </select>
+                    <div id="mix">
+                        <button id="book">contiune booking live class</button>
+                        <div id="mix1">
+                            <div id="img"><img
+                                    src="https://assets-v2.scaler.com/assets/scaler/svg/people-group-61788bad09e0699aa3090ab64b81944c9fc9ccb80ff5db9abb267dd36e0d626d.svg.gz">
+                            </div>
+                            <div id="seat">limited seats</div>
+                        </div>
+                    </div>
+                    <div id="home21">
+                        <div id="home210">Already have an Account?<a>click here</a></div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="problem">
+        <div id="d10">A program for engineers to master <b>Problem Solving & System Design</b></div>
+        <div id="pro1">
+            <div id="prob11">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/structured-c36517d8d41efb3a24cbcb3fe1c8b27ffcfacb6b1462ec3e60516504a07eaff6.svg.gz">
+                <div id="prob1">Structured, industry vetted curriculum</div>
+            </div>
+            <div id="prob2">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/live-classes-afff2e39f63a26a19ee4ae844d4b0891c20c50e4b670a224564640cbb973f867.svg.gz">
+                <div id="prob16">Live classes by faculty who have been there, done that</div>
+            </div>
+            <div id="prob3">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/project1-9fc6130d4e271198d5f051da0712b27627c872a353dac61c91f248e4f60b6ddf.svg.gz">
+                <div id="prob16">Practical experience through real-life projects</div>
+            </div>
+        </div>
+        <div id="pro2">
+            <div id="prob4">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/flexibility-94067174b36a4a38b3448219f64ccd3e42b3f32667c5ff0ec8d8fab665525d87.svg.gz">
+                <div id="prob1">Regular 1:1 mentorship from industry veterans</div>
+            </div>
+            <div id="prob5">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/career-support-c92399914995cba52680341de44c1ce49d292b1de0f10aeb58c3c58a79e3ad3b.svg.gz">
+                <div id="prob16">Career support via a dedicated recruitment team, alumni network, etc.</div>
+            </div>
+            <div id="prob6">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/at-a-glance/mentor-efc7b3e100e7f2bd17f1f95f4ca28b5205ac3f4e04d4cddd064a800cc63f1c74.svg.gz">
+                <div id="prob16">Aspirational peer group of 2,000+ Scaler students & alumni</div>
+            </div>
+        </div>
+    </div>
+
+    <div id="problem1">
+        <div id="h5">We have designed a <b>flexible program</b> for you</div>
+        <div id="missed">
+            <div id="work">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/missed-class-logo-60d09407cfb901d01f9acbf3ce40460ea42c291dc97dd6a8d9fe624594977239.svg.gz">
+                <div id="l1">Missed a class?</div>
+                <div id="l2">Watch the recording later, with teaching assistants available to solve your doubts</div>
+            </div>
+
+            <div id="work">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/family-logo-48c3a44b9f17f1e1a6ebcfa8e9ec7fa2370c27094caf996810c02754e307b3d1.svg.gz">
+                <div id="l1">Work / family needs time?</div>
+                <div id="l2">Pause your course and restart a month later with the next batch!</div>
+            </div>
+
+            <div id="work">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/office-d6141a2e19c03a99003316e141cdb625675a0498ba05e2df5d4ebb128bc21418.svg.gz">
+                <div id="l1">Jobs & class timings clash?</div>
+                <div id="l2">Decide your ideal class timing together with your classmates</div>
+            </div>
+        </div>
+
+        <div id="missed">
+            <div id="work">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/revise-8aceca46e65750c791c12d778669bf01650ef9e02c2d211ba30c6831c34946ab.svg.gz">
+                <div id="l1">Want to revise?</div>
+                <div id="l2">Access assignments/notes lifelong and recordings upto 6 months post course completion</div>
+            </div>
+
+            <div id="work">
+                <img
+                    src="https://assets-v2.scaler.com/assets/academy/svg/doubts-44d18551b6589cdeff9e88978faac43d7bb0787cdc74e508832d7692b4d4158b.svg.gz">
+                <div id="l1">Have doubts?</div>
+                <div id="l2">Get them resolved over text / video by our expert teaching assistants!</div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
